feat(android): improve Suanbao overlay gestures and menu